# wbridge

./: .gitignore  DESIGN.md  IMPLEMENTATION_LOG.md  LICENSE  NEXT_SESSION_PROMPT_SETTINGS_HEALTH_CONFIG.md  README.md  RESEARCH_QUESTION.md  implementation_plan.md  pyproject.toml  wayland-bridge.py
docs/: DESIGN.md
docs/notes/: NEXT_SESSION_PROMPT.md  NEXT_SESSION_PROMPT_FINALIZE_APP.md  NEXT_SESSION_PROMPT_PROFILES.md  implementation_plan_multiplattform.md
src/wbridge/: __init__.py  actions.py  app.py  autostart.py  cli.py  client_ipc.py  config.py  gnome_shortcuts.py  gui_window.py  history.py  logging_setup.py  platform.py  profiles.py  profiles_manager.py  selection_monitor.py  server_ipc.py
src/wbridge/assets/: style.css
src/wbridge/help/en/: actions.md  history.md  settings.md  shortcuts.md  status.md  triggers.md
src/wbridge/profiles/: __init__.py
src/wbridge/profiles/obsidian-local-rest/: actions.json  profile.toml  settings.patch.ini  shortcuts.json
src/wbridge/profiles/witsy/: actions.json  profile.toml  settings.patch.ini  shortcuts.json
src/wbridge/ui/: __init__.py  main_window.py
src/wbridge/ui/components/: cta_bar.py  help_panel.py  markdown.py  page_header.py
src/wbridge/ui/pages/: actions_page.py  history_page.py  settings_page.py  shortcuts_page.py  status_page.py  triggers_page.py
